# voldbaboon-s-RMV-training

./: README.md
OpenCV_Project/: README.md
OpenCV_Project/src/: main.cpp
task/: CMakeLists.txt  jilu.txt  main.cpp
task/include/: windmill.hpp
task/src/: windmill.cpp
